--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,10 +20,11 @@ body {
 
 #canvas2d-wrapper {
 	position: absolute;
-	top: -5vw; // Magic value
-	right: 0;
+	top: 0;
+	left: 0;
 	width: 30vw;
 	height: 30vw;
+	// background-color: rgba(255,0,0,0.5);
 }
 
 #canvas2d {
