[Game] Units can conquer buildings

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -114,6 +114,11 @@ body {
 			display: block;
 		}
 	}
+	&.Conquer {
+		#game-menu-Conquer {
+			display: block;
+		}
+	}
 	&.Wait {
 		#game-menu-Wait {
 			display: block;
