[Game][UI][DOM] Healers can heal

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -146,6 +146,11 @@ body {
 			display: block;
 		}
 	}
+	&.Heal {
+		#game-menu-Heal {
+			display: block;
+		}
+	}
 	&.Conquer {
 		#game-menu-Conquer {
 			display: block;
