[DOM] Fullscreen button

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,7 +46,7 @@ body {
 
 // COMMON
 
-#ui,
+#options-panel,
 #top-panel,
 #game-menu {
 	position: fixed;
@@ -95,7 +95,7 @@ body {
 
 // UI PANEL
 
-#ui {
+#options-panel {
 	bottom: 0;
 	left: 0;
 	width: 100vw;
