--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -96,13 +96,24 @@ body {
 // UI PANEL
 
 #options-panel {
-	bottom: 0;
+	bottom: -0;
 	left: 0;
 	width: 100vw;
-  text-align: center;
+	text-align: center;
+	transform: translateY(calc(100% - (2 * 1rem + 2.5rem)));
+	transition: transform 0.25s;
+
+	&.active {
+		transform: translateY(0);
+	}
 
 	p {
 		margin-top: 0;
+		margin-bottom: 1rem;
+	}
+
+	button {
+		border: 2px solid white !important;
 	}
 }
 
