--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,12 +4,16 @@
 
 // BASE
 
+*, *::after, *::before {
+	box-sizing: border-box;
+}
+
 html {
 	font-size: 62.5%;
 }
 
 body {
-	overflow: hidden;
+	// overflow: hidden;
 	font-size: 1.0rem;
 	// font-family: 'Ranchers', cursive;
 	font-family: 'Righteous', cursive;
@@ -18,6 +22,7 @@ body {
 // GAME WRAPPER
 
 .game-wrapper {
+	width: 100vw;
 	height: 100vh;
 	position: relative;
 }
@@ -25,6 +30,7 @@ body {
 // CANVAS 3D
 
 #canvas3d {
+	display: block;
 	width: 100vw;
 	height: 100vh;
 	touch-action: none;
@@ -34,17 +40,58 @@ body {
 
 #canvas2d-wrapper {
 	position: absolute;
-	top: 0;
+	top: 3rem; // Size of top bar
 	left: 0;
-	width: 30vw;
-	height: 30vw;
+	width: 25vw;
+	height: 25vw;
 	// background-color: rgba(255,0,0,0.5);
 }
 
 #canvas2d {
+	display: block;
 }
 
 // COMMON
+
+@mixin btn-color($color) {
+	color: $color;
+	background-color: transparent;
+	border-color: $color;
+
+	&:hover,
+	&:focus {
+		background-color: $color;
+		color: #111;
+	}
+
+	&:active {
+		background-color: #f80;
+		border-color: #f80;
+		color: white;
+	}
+}
+
+button {
+	border: 2px solid;
+
+	@include btn-color(white);
+
+	padding: 0.5rem 1rem;
+	font-weight: bold;
+	text-transform: capitalize;
+	transition: all 0.25s;
+
+	&:hover,
+	&:focus {
+		outline: none;
+	}
+
+	&.btn-highlight {
+		@include btn-color(#f08);
+
+		text-transform: uppercase;
+	}
+}
 
 #options-panel,
 #top-panel,
@@ -54,27 +101,6 @@ body {
 	background-color: rgba(0,0,0,0.75);
 	color: white;
 
-	button {
-		border: none;
-		padding: 0.5rem 1rem;
-		background-color: transparent;
-		color: white;
-		font-weight: bold;
-		text-transform: capitalize;
-		transition: all 0.25s;
-
-		&:hover,
-		&:focus {
-			background-color: white;
-			color: #333;
-			outline: none;
-		}
-
-		&:active {
-			background-color: #f80;
-			color: white;
-		}
-	}
 }
 
 // TOP PANEL
@@ -82,11 +108,17 @@ body {
 	top: 0;
 	left: 0;
 	width: 100vw;
+	padding: 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+.itembar {
 	display: flex;
 }
 
-.top-panel-item {
-	margin-right: 1rem;
+.itembar-item {
+	padding: 1rem;
 
 	> span {
 		font-weight: bold;
@@ -111,10 +143,6 @@ body {
 		margin-top: 0;
 		margin-bottom: 1rem;
 	}
-
-	button {
-		border: 2px solid white !important;
-	}
 }
 
 // GAME MENU PANEL
@@ -137,6 +165,7 @@ body {
 		width: 100%;
 		margin-bottom: 0.5rem;
 		text-align: left;
+		border-width: 0 !important;
 		
 		&.game-menu-item--dynamic {
 			display: flex;
