--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
 	box-sizing: border-box;
 }
 
+$topbar-height: 3.2rem;
+
 html {
 	font-size: 62.5%;
 }
@@ -40,7 +42,7 @@ body {
 
 #canvas2d-wrapper {
 	position: absolute;
-	top: 3rem; // Size of top bar
+	top: $topbar-height;
 	left: 0;
 	width: 25vw;
 	height: 25vw;
@@ -86,10 +88,16 @@ button {
 		outline: none;
 	}
 
+	&.btn-strong {
+		text-transform: uppercase;
+	}
+
 	&.btn-highlight {
 		@include btn-color(#f08);
+	}
 
-		text-transform: uppercase;
+	&:disabled {
+		opacity: 0.5;
 	}
 }
 
@@ -148,7 +156,7 @@ button {
 // GAME MENU PANEL
 
 #game-menu {
-	top: 0;
+	top: $topbar-height;
 	right: 0;
 	padding: 0.5rem;
 	padding-bottom: 0;
