--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -332,9 +332,9 @@ input[type="number"] {
 	}
 }
 
-#homepage-panel,
-#game-panel,
-#options-panel,
+#homepage,
+#configuration,
+#options,
 #top-panel,
 #game-menu {
 	position: fixed;
@@ -344,8 +344,8 @@ input[type="number"] {
 }
 
 // HOMEPAGE PANEL
-#homepage-panel,
-#options-panel {
+#homepage,
+#options {
 	padding: $gutter;
 	top: 50%;
 	left: 50%;
@@ -357,7 +357,7 @@ input[type="number"] {
 	}
 }
 
-#homepage-panel {
+#homepage {
 
 	> .game-version {
 		@extend .small;
@@ -384,7 +384,7 @@ input[type="number"] {
 	}
 }
 
-#options-panel {
+#options {
 	text-align: center;
 
 	> h2 {
@@ -421,13 +421,15 @@ input[type="number"] {
 	}
 }
 
-// GAME PANEL
+// GAME CONFIGURATION PANEL
 
-#game-panel {
+#configuration {
 	overflow: hidden;
 	bottom: 0;
 	left: 0;
 	width: 100vw;
+	height: 50vh;
+	background-color: #222;
 	text-align: center;
 	transform: translateY(100%);
 	transition: transform 0.25s;
@@ -437,14 +439,9 @@ input[type="number"] {
 	}
 }
 
-#game-panel {
-	height: 50vh;
-	background-color: #222;
-}
-
 // GAME CONFIGURATION
 
-.game-configuration {
+.configuration {
 	position: relative;
 
 	@media (min-width: 40em) {
@@ -457,14 +454,14 @@ input[type="number"] {
 	}
 }
 
-.game-configuration-btn {
+.configuration-btn {
 	position: absolute;
 	z-index: +1;
 }
-.game-configuration-btn--previous { top: $gutter-half; left: 0; }
-.game-configuration-btn--next { bottom: $gutter-half; right: 0; }
+.configuration-btn--previous { top: $gutter-half; left: 0; }
+.configuration-btn--next { bottom: $gutter-half; right: 0; }
 
-.game-configuration-wrapper {
+.configuration-wrapper {
 	width: 700%;
 	display: flex;
 	transition: transform 0.25s;
@@ -478,7 +475,7 @@ input[type="number"] {
 	.step-6 & { transform: translateX(-(100% * 6 / 7)); }
 }
 
-.game-configuration-section {
+.configuration-section {
 	flex-basis: (100% / 7);
 	margin-left: 1rem;
 	margin-right: 1rem;
@@ -499,9 +496,9 @@ input[type="number"] {
 	}
 }
 
-.game-configuration-section__header {
+.configuration-section__header {
 }
-.game-configuration-section__body {
+.configuration-section__body {
 	flex-grow: 1;
 	max-height: 27vh; // Magic value!
 	overflow-y: auto;
@@ -510,12 +507,12 @@ input[type="number"] {
 		margin-bottom: $gutter;
 	}
 }
-.game-configuration-section__footer {
+.configuration-section__footer {
 	padding-top: $gutter-half;
 	padding-right: $gutter-double; // Space for "next" button
 }
 
-.game-configuration-player {
+.configuration-player {
 	margin-bottom: $gutter-quarter;
 
 	display: flex;
@@ -533,7 +530,7 @@ input[type="number"] {
 	}
 }
 
-.game-configuration-player__p-color {
+.configuration-player__p-color {
 	width: $gutter-half * 3;
 	color: #111;
 	border: 0.2rem solid;
