[Screens] New 'intro' screen, late map/renderers creation

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,645 +2,16 @@
 @import url('https://fonts.googleapis.com/css?family=Righteous');
 @import '../../node_modules/normalize-css/normalize.css';
 
-// VARIABLES
+@import './lib/variables';
 
-$color-primary: #bb0022;
+@import './lib/base';
+@import './lib/grid';
 
-$gutter: 2rem;
+@import './lib/game';
+@import './lib/forms';
 
-$gutter-half: $gutter / 2;
-$gutter-quarter: $gutter / 4;
-$gutter-heighth: $gutter / 8;
-$gutter-double: $gutter * 2;
+@import './lib/pannels';
 
-// BASE
+@import './lib/game-menu';
+@import './lib/big-banner';
 
-*, *::after, *::before {
-	box-sizing: border-box;
-}
-
-$topbar-height: 3.2rem;
-
-html {
-	font-size: 62.5%;
-}
-
-body {
-	// overflow: hidden;
-	font-size: 1.4rem;
-	// font-family: 'Ranchers', cursive;
-	font-family: 'Righteous', cursive;
-}
-
-h2 {
-	color: $color-primary;
-}
-
-h4 {
-	margin-top: 0;
-	margin-bottom: $gutter-half;
-	text-transform: capitalize;
-	color: #666;
-}
-
-p {
-	margin-top: 0;
-	margin-bottom: $gutter-half;
-}
-
-.small {
-	font-size: 1.2rem;
-	opacity: 0.5;
-}
-
-// GAME WRAPPER
-
-.game-wrapper {
-	width: 100vw;
-	height: 100vh;
-	position: relative;
-}
-
-.game-viewport {
-	height: 100vh;
-	background-color: white;
-}
-
-// CANVAS 3D
-
-#canvas3d {
-	display: block;
-	width: 100vw;
-	height: 100vh;
-	touch-action: none;
-	transition: height 0.5s; // BEWARE: linked to await game.wait time (500ms)
-
-	&.half-top {
-		height: 50vh;
-	}
-}
-
-// CANVAS 2D
-
-#canvas2d-wrapper {
-	position: absolute;
-	top: $topbar-height;
-	left: 0;
-	width: 25vw;
-	height: 25vw;
-	// background-color: rgba(255,0,0,0.5);
-	transform: translateX(-100%);
-	transition: all 0.25s;
-
-	&.active {
-		transform: translateX(0);
-	}
-}
-
-#canvas2d {
-	display: block;
-}
-
-// COMMON
-
-@mixin btn-color($color) {
-	color: $color;
-	background-color: transparent;
-	border-color: $color;
-
-	&:hover,
-	&:focus {
-		background-color: $color;
-		color: #111;
-	}
-
-	&:active {
-		background-color: $color-primary;
-		border-color: $color-primary;
-		color: white;
-	}
-}
-
-button {
-	display: inline-block;
-	border: 0.2rem solid;
-
-	@include btn-color(white);
-
-	padding: $gutter-quarter $gutter-half;
-	font-weight: bold;
-	text-transform: capitalize;
-	transition: all 0.25s;
-
-	&:hover,
-	&:focus {
-		outline: none;
-	}
-
-	&:disabled {
-		opacity: 0.5;
-	}
-	
-	&.btn--strong {
-		text-transform: uppercase;
-	}
-	
-	&.btn--highlight {
-		@include btn-color($color-primary);
-	}
-	
-	&.btn--small {
-		padding: $gutter-heighth $gutter-quarter;
-		font-weight: normal;
-	}
-}	
-
-// FORM UI
-
-.input-block {
-	display: flex;
-	align-items: end;
-	flex-wrap: wrap;
-	margin-bottom: $gutter-half;
-	@media (min-width: 40em) {
-		flex-wrap: nowrap;
-	}
-
-	> * {
-		flex-basis: 100%;
-
-		@media (min-width: 40em) {
-			flex-basis: 50%;
-			max-width: 50%;
-		}
-	}
-
-	> label,
-	> .label {
-		text-align: left;
-		margin-bottom: $gutter-quarter;
-		text-transform: capitalize;
-
-		// @media (min-width: 40em) {
-		// 	text-align: right;
-		// 	padding-right: $gutter-half;
-		// }
-	}
-
-	> .input-with-unit {
-		text-align: left;
-	}
-}
-
-input[type="text"],
-input[type="number"],
-.checky,
-.raydio {
-	display: inline-block;
-	border: 0.2rem solid #666;
-}
-
-label, 
-.label,
-input[type="text"],
-input[type="number"] {
-	padding: $gutter-heighth $gutter-quarter;
-	background-color: transparent;
-	color: white;
-}
-
-label,
-.label {
-	padding: $gutter-heighth 0;
-	display: inline-block;
-	color: $color-primary;
-	line-height: 1;
-}
-
-input[type="text"] {
-	max-width: $gutter * 5;
-}
-input[type="number"] {
-	max-width: $gutter * 3;
-	text-align: right;
-
-	&.number--small {
-		max-width: $gutter * 2;
-	}
-}
-
-.input-unit {
-	padding: $gutter-heighth;
-	padding-left: 0;
-	background-color: #666;
-	border: 0.2rem solid #666;
-	color: white;
-}
-
-.checky {
-	> input[type="checkbox"] {
-		position: absolute;
-		left: -1000rem;
-	}
-
-	> input[type="checkbox"] + label {
-		display: inline-block;
-		color: #666;
-		font-size: 0;
-		padding: 0;
-
-		&::before,
-		&::after {
-			font-size: 1.4rem;
-			display: inline-block;
-			padding: ($gutter-heighth + 0.2rem) ($gutter-quarter + 0.2rem);
-			transition: color 0.25s, background-color 0.5s;
-		}
-		&::before {
-			content: "on";
-		}
-		&::after {
-			content: "off";
-			color: white;
-			background-color: #666;
-		}
-
-		&:hover {
-			color: white;
-		}
-	}
-
-	> input[type="checkbox"]:checked + label {
-		&::before {
-			color: white;
-			background-color: $color-primary;
-		}
-		&::after {
-			color: #666;
-			background-color: transparent;
-		}
-		&:hover {
-			&::after {
-				color: white;
-			}
-		}
-	}
-}
-
-.raydio {
-	> input[type="radio"] {
-		position: absolute;
-		left: -1000rem;
-		// display: none;
-	}
-
-	> input[type="radio"] + label {
-		display: inline-block;
-		padding: ($gutter-heighth + 0.2rem) ($gutter-quarter + 0.2rem);
-		color: #666;
-		transition: color 0.25s, background-color 0.5s;
-
-		&:hover {
-			color: white;
-		}
-	}
-
-	> input[type="radio"]:checked + label {
-		background: $color-primary;
-		color: white;
-	}
-}
-
-.slidey {
-	display: flex;
-	border: 0.2rem solid #666;
-
-	> input[type="range"] {
-		flex-grow: 1;
-		min-width: 0;
-	}
-	
-	> .slidey-value {
-		min-width: $gutter-double;
-		padding: $gutter-heighth $gutter-quarter;
-		text-align: left;
-		background-color: #666;
-	}
-
-	&.slidey--disabled {
-		opacity: 0.5;
-	}
-}
-
-#homepage,
-#configuration,
-#options,
-#top-panel,
-#game-menu {
-	position: fixed;
-	padding: $gutter-half;
-	background-color: rgba(0,0,0,0.75);
-	color: white;
-}
-
-// HOMEPAGE PANEL
-#homepage,
-#options {
-	padding: $gutter;
-	top: 50%;
-	left: 50%;
-	transform: translate3d(-50%, calc(-100vh - 50%), 0);
-	transition: all 0.5s;
-
-	&.active {
-		transform: translate3d(-50%, -50%, 0);
-	}
-}
-
-#homepage {
-
-	> .game-version {
-		@extend .small;
-		text-align: right;
-	}
-
-	> h1 {
-		font-size: 4rem;
-		margin-top: $gutter;
-		margin-bottom: 0;
-	}
-
-	> p.small {
-		margin-bottom: $gutter;
-	}
-
-	> button {
-		display: block;
-		width: 100%;
-
-		&:not(:last-child) {
-			margin-bottom: $gutter-half;
-		}
-	}
-}
-
-#options {
-	text-align: center;
-
-	> h2 {
-		margin-top: $gutter-half;
-	}
-}
-
-// TOP PANEL
-
-#top-panel {
-	top: 0;
-	left: 0;
-	width: 100vw;
-	padding: 0;
-	display: flex;
-	justify-content: space-between;
-	transform: translate3d(0, -100%, 0);
-	transition: transform 0.25s;
-
-	&.active {
-		transform: translate3d(0, 0, 0);
-	}
-}
-
-.itembar {
-	display: flex;
-}
-
-.itembar-item {
-	padding: $gutter-half;
-
-	> span {
-		font-weight: bold;
-	}
-}
-
-// GAME CONFIGURATION PANEL
-
-#configuration {
-	overflow: hidden;
-	bottom: 0;
-	left: 0;
-	width: 100vw;
-	height: 50vh;
-	background-color: #222;
-	text-align: center;
-	transform: translateY(100%);
-	transition: transform 0.25s;
-
-	&.active {
-		transform: translateY(0);
-	}
-}
-
-// GAME CONFIGURATION
-
-.configuration {
-	position: relative;
-
-	@media (min-width: 40em) {
-		margin-left: 4rem;
-		margin-right: 4rem;
-	}
-	@media (min-width: 60em) {
-		margin-left: 6rem;
-		margin-right: 6rem;
-	}
-}
-
-.configuration-btn {
-	position: absolute;
-	z-index: +1;
-}
-.configuration-btn--previous { top: $gutter-half; left: 0; }
-.configuration-btn--next { bottom: $gutter-half; right: 0; }
-
-.configuration-wrapper {
-	width: 700%;
-	display: flex;
-	transition: transform 0.25s;
-
-	.step-0 & { transform: translateX(0); }
-	.step-1 & { transform: translateX(-(100% * 1 / 7)); }
-	.step-2 & { transform: translateX(-(100% * 2 / 7)); }
-	.step-3 & { transform: translateX(-(100% * 3 / 7)); }
-	.step-4 & { transform: translateX(-(100% * 4 / 7)); }
-	.step-5 & { transform: translateX(-(100% * 5 / 7)); }
-	.step-6 & { transform: translateX(-(100% * 6 / 7)); }
-}
-
-.configuration-section {
-	flex-basis: (100% / 7);
-	margin-left: 1rem;
-	margin-right: 1rem;
-	padding: $gutter-half;
-	padding-top: 0; // H3 handles top space
-	background-color: #111;
-
-	display: flex;
-	flex-direction: column;
-
-	h3 {
-		margin-top: $gutter;
-		margin-bottom: $gutter;
-	}
-	
-	h4 {
-		text-align: left;
-	}
-}
-
-.configuration-section__header {
-}
-.configuration-section__body {
-	flex-grow: 1;
-	max-height: 27vh; // Magic value!
-	overflow-y: auto;
-
-	button:first-child {
-		margin-bottom: $gutter;
-	}
-}
-.configuration-section__footer {
-	padding-top: $gutter-half;
-	padding-right: $gutter-double; // Space for "next" button
-}
-
-.configuration-player {
-	margin-bottom: $gutter-quarter;
-
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-
-	> * {
-		margin-bottom: $gutter-quarter;
-		margin-right: $gutter-quarter;
-		
-		&:last-child,
-		&:first-child {
-			margin-right: 0;
-		}
-	}
-}
-
-.configuration-player__p-color {
-	width: $gutter-half * 3;
-	color: #111;
-	border: 0.2rem solid;
-}
-
-// GAME MENU PANEL
-
-#game-menu {
-	top: $topbar-height;
-	right: 0;
-	padding: 0.5rem;
-	padding-bottom: 0;
-	color: white;
-	transform: translateX(100%);
-	transition: all 0.25s;
-
-	&.active {
-		transform: translateX(0);
-	}
-
-	button {
-		width: 100%;
-		margin-bottom: 0.5rem;
-		text-align: left;
-		border-width: 0 !important;
-		
-		&.game-menu-item--with-value {
-			display: flex;
-			justify-content: space-between;
-
-			> span {
-				margin-left: 1rem;
-			}
-		}
-
-		&.game-menu-item--disabled {
-			opacity: 0.5;
-		}
-	}
-}
-
-// BIG BANNER
-
-#big-banner {
-	position: fixed;
-	width: 100vw;
-	min-height: 50vh;
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
-	background-color: white;
-	transition: all 1s;
-	display: none;
-
-	&.active {
-		display: block;
-	}
-	&.above {
-		transform: translateY(-250%);
-	}
-	&.below {
-		transform: translateY(150%);
-	}
-}
-
-#big-banner-content {
-	position: absolute;
-	width: 100%;
-	top: 50%;
-	left: 50%;
-	transform: translate3d(-50%, -50%, 0);
-	color: #444;
-	font-size: calc(2rem + 2vw);
-	text-align: center;
-	transition: all 1s;
-
-	.text-left & {
-		transform: translate3d(-150%, -50%, 0);
-	}
-	.text-right & {
-		transform: translate3d(50%, -50%, 0);
-	}
-}
-
-// GRID
-
-.grid {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-.grid-1-of-2 {
-
-	> * {
-		flex-basis: 100%;
-		margin-bottom: $gutter;
-
-		@media (min-width: 20em) {
-			flex-basis: calc(50% - 0.5rem);
-		}
-	}
-}
-
-.grid-1-of-3 {
-
-	> * {
-
-		@media (min-width: 40em) {
-			flex-basis: calc(33.33% - 0.5rem);
-		}
-	}
-}
