--- a/src/scss/lib/_base.scss
+++ b/src/scss/lib/_base.scss
@@ -12,13 +12,20 @@ html {
 
 body {
 	// overflow: hidden;
-	font-size: 1.4rem;
+	font-size: 1.6rem;
 	// font-family: 'Ranchers', cursive;
 	font-family: 'Righteous', cursive;
 }
 
+h1 {
+	line-height: 1;
+	text-align: center;
+}
+
 h2 {
 	color: $color-primary;
+	margin-top: $gutter-half;
+	margin-bottom: $gutter-half;
 }
 
 h4 {
@@ -26,6 +33,7 @@ h4 {
 	margin-bottom: $gutter-half;
 	text-transform: capitalize;
 	color: #666;
+	text-transform: uppercase;
 }
 
 p {
