[Config] Export and import game configuration JSON

--- a/src/scss/lib/_forms.scss
+++ b/src/scss/lib/_forms.scss
@@ -136,6 +136,14 @@ input[type="number"] {
 	}
 }
 
+textarea {
+	display: block;
+	width: 100%;
+	font-size: 1.2rem;
+	margin-bottom: $gutter;
+}
+
+
 .input-unit {
 	padding: $gutter-heighth;
 	padding-left: 0;
